force-app/main/default/objects/ChatMessage__e/ChatMessage__e.object-meta.xml
<CustomObject>
    <label>ChatMessage</label>
</CustomObject>