force-app/main/default/objects/ChatMessage__e/fields/ChatId__c.field-meta.xml
<CustomField>
    <fullName>ChatId__c</fullName>
    <label>Chatting Group Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>