force-app/main/default/objects/ChatMessage__e/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <label>Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>