force-app/main/default/objects/ChatMessage__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>NEW_MEMBER : 채팅방 맴버 초대
OUT_MEMBER : 맴버 채팅방 나감
MESSAGE: 신규 메세지
IN: 채팅방 접속 안내</description>
    <label>Message Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>